# yolov5_cpp_openvino

./: .clang-format  .gitignore
demo/: CMakeLists.txt  detector.cpp  detector.h  main.cpp
demo/Detector/: CMakeLists.txt  Detector.cpp  Detector.h
demo/res/: yolov5m.xml  yolov5s.xml
